<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/LANDED_Text_view"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="LANDED"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/landing_prediction_area"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Descent_Rate_Text_view"
        android:layout_width="220dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/DescentRateLabel"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/LANDED_Text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude_meters_label"
        app:layout_constraintBottom_toBottomOf="@+id/user_altitude_edit_text"
        app:layout_constraintStart_toEndOf="@+id/user_altitude_edit_text"
        app:layout_constraintTop_toTopOf="@+id/user_altitude_edit_text" />

    <Space
        android:id="@+id/space2"
        android:layout_width="229dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:onClick="send_to_gmaps_callback"
        android:text="@string/landing_prediction_gmaps_btn_txt"
        app:layout_constraintBottom_toTopOf="@+id/user_altitude_edit_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/landing_prediction_area"
        android:layout_width="220dp"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/landing_prediction"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="378dp"
        android:layout_height="203dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fillViewport="true"
        android:rotationX="0"
        android:scrollbarStyle="insideOverlay"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/packet_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:accessibilityHeading="false"
                android:accessibilityLiveRegion="none"
                android:justificationMode="none"
                android:keepScreenOn="true"
                android:rotationX="0"
                android:text="@string/landing_guess_text"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textDirection="ltr"
                android:textIsSelectable="true"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/user_altitude_edit_text"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="@string/UserDefaultAltitude"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/disconnectedStar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/user_altitude_edit_text"
        android:text="@string/UserAltitudeLabel"
        app:layout_constraintBottom_toBottomOf="@+id/user_altitude_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/user_altitude_edit_text"
        app:layout_constraintTop_toTopOf="@+id/user_altitude_edit_text" />

    <ImageView
        android:id="@+id/disconnectedStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="Star Off"
        app:layout_constraintBottom_toTopOf="@+id/connectionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <ImageView
        android:id="@+id/connectedStar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Star On"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/disconnectedStar"
        app:layout_constraintStart_toStartOf="@+id/disconnectedStar"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ToggleButton
        android:id="@+id/connectionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="connection_button_callback"
        android:textOff="Connect"
        android:textOn="CONNECTED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:onClick="clearpackets_callback"
        android:text="Clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/Descent_Rate_Text_view"
        app:layout_constraintStart_toEndOf="@+id/landing_prediction_area"
        app:layout_constraintTop_toBottomOf="@+id/user_altitude_edit_text"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/CopyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/CopyLastCoords"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clearButton" />

    <TextView
        android:id="@+id/packetTableHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp"
        android:text="@string/PacketLabels"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:cardBackgroundColor="#FF5733"
        app:cardCornerRadius="7dp"
        app:cardElevation="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2">


        <TextView
            android:id="@+id/Packet_quality_indicator"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="0dp"
            android:background="#FF5733"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/bootupText"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/exportButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginEnd="2dp"
        android:onClick="store_data_callback"
        android:text="EXPORT DATA"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>